[package]
name = "protohackers-5-mob-in-the-middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
fancy-regex = "0.11.0"
futures = "0.3.25"
lazy_static = "1.4.0"
protohackers-utils = { path = "../protohackers-utils" }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
