[package]
name = "protohackers-9-job-centre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
priority-queue = "1.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["net", "macros", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.7.4", features = ["codec"] }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'
