[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio-util = { version = "0.7.4", features = ["codec"] }
